# autd3-rs

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  Makefile.toml  README.md  build.py  cliff.toml  codecov.yml  cross-aarch64.sh  cross-arm32.sh
autd3/: Cargo.toml  README.md
autd3-core/: Cargo.toml  README.md  build.rs
autd3-core/src/: lib.rs
autd3-core/src/acoustics/: mod.rs
autd3-core/src/common/: angle.rs  mod.rs
autd3-core/src/datagram/: filter.rs  gpio.rs  inspect.rs  limits.rs  loop_behavior.rs  mod.rs  operation.rs  option.rs  pulse_width.rs  transition_mode.rs  tuple.rs
autd3-core/src/defined/: angle.rs  mod.rs
autd3-core/src/devices/: autd3.rs  mod.rs
autd3-core/src/environment/: mod.rs
autd3-core/src/ethercat/: dc_sys_time.rs  mod.rs
autd3-core/src/firmware/: cpu_gpio.rs  drive.rs  intensity.rs  mod.rs  params.rs  phase.rs  pulse_width.rs  sampling_config.rs  transition_mode.rs
autd3-core/src/gain/: drive.rs  emit_intensity.rs  error.rs  filter.rs  mod.rs  phase.rs
autd3-core/src/geometry/: device.rs  mod.rs  rotation.rs  transducer.rs
autd3-core/src/link/: async.rs  buffer_pool.rs  error.rs  mod.rs  sync.rs
autd3-core/src/modulation/: error.rs  loop_behavior.rs  mod.rs  sampling_config.rs
autd3-core/src/resampler/: mod.rs  sinc.rs
autd3-core/src/sampling_config/: error.rs  mod.rs
autd3-core/src/sleep/: async.rs  mod.rs  sync.rs
autd3-core/src/utils/: float.rs  int.rs  mod.rs  timer.rs
autd3-derive/: Cargo.toml  README.md
autd3-derive/src/: builder.rs  gain.rs  lib.rs  modulation.rs  parser.rs
autd3-driver/: Cargo.toml  README.md
autd3-driver/benches/: gain.rs
autd3-driver/src/: autd3_device.rs  defined.rs  error.rs  firmware_version.rs  lib.rs  link.rs  sync_mode.rs  timer_strategy.rs
autd3-driver/src/acoustics/: mod.rs
autd3-driver/src/common/: drive.rs  emit_intensity.rs  loop_behavior.rs  mod.rs  phase.rs  sampling_config.rs  segment.rs
autd3-driver/src/cpu/: ec_config.rs  header.rs  mod.rs  segment.rs
autd3-driver/src/datagram/: boxed.rs  clear.rs  clk.rs  clock.rs  cpu_gpio_out.rs  debug.rs  force_fan.rs  fpga_gpio_out.rs  gain.rs  gpio_in.rs  group.rs  info.rs  mod.rs  mod_delay.rs  modulation.rs  nop.rs  output_mask.rs  phase_corr.rs  phase_filter.rs  pulse_width_encoder.rs  reads_fpga_info.rs  reads_fpga_state.rs  segment.rs  silencer.rs  stop.rs  synchronize.rs  tuple.rs  with_loop_behavior.rs  with_parallel_threshold.rs  with_segment.rs  with_segment_transition.rs  with_timeout.rs
autd3-driver/src/defined/: angle.rs  control_point.rs  mod.rs
autd3-driver/src/ethercat/: consts.rs  dc_sys_time.rs  mod.rs  sync_mode.rs
autd3-driver/src/firmware/: firmware_version.rs  mod.rs  tag.rs  version.rs
autd3-driver/src/fpga/: mod.rs
autd3-driver/src/freq/: float.rs  int.rs  mod.rs
autd3-driver/src/geometry/: device.rs  mod.rs  rotation.rs  transducer.rs
autd3-driver/src/link/: mod.rs  sync.rs
autd3-driver/src/operation/: clear.rs  debug.rs  force_fan.rs  gain.rs  info.rs  mod.rs  mod_delay.rs  modulation.rs  null.rs  phase_filter.rs  pulse_width_encoder.rs  reads_fpga_info.rs  reads_fpga_state.rs  sync.rs
autd3-driver/src/osal_timer/: linux.rs  macosx.rs  mod.rs  timer.rs  windows.rs
autd3-driver/src/transmission/: mod.rs  sender.rs  strategy.rs
autd3-driver/src/utils/: float.rs  mod.rs  timer.rs
autd3-firmware-emulator/: Cargo.toml  README.md
autd3-firmware-emulator/src/: error.rs  lib.rs
autd3-firmware-emulator/src/cpu/: emulator.rs  mod.rs  params.rs
autd3-firmware-emulator/src/fpga/: emulator.rs  mod.rs  params.rs
autd3-firmware-emulator/tests/: test.rs
autd3-firmware-emulator/tests/op/: clear.rs  clk.rs  cpu_gpio_out.rs  debug.rs  delay.rs  force_fan.rs  fpga_gpio_out.rs  gain.rs  gpio_in.rs  info.rs  mod.rs  modulation.rs  nop.rs  output_mask.rs  phase_corr.rs  phase_filter.rs  pulse_width_encoder.rs  reads_fpga_info.rs  reads_fpga_state.rs  silencer.rs  silener.rs  sync.rs
autd3-gain-holo/: Cargo.toml  README.md
autd3-gain-holo/benches/: holo.rs
autd3-gain-holo/src/: amp.rs  backend.rs  backend_nalgebra.rs  bench_utilities.rs  constraint.rs  error.rs  helper.rs  lib.rs  test_utilities.rs
autd3-gain-holo/src/combinatorial/: greedy.rs  mod.rs
autd3-gain-holo/src/helper/: acoustics.rs  alg.rs  mod.rs  result.rs
autd3-gain-holo/src/linear_synthesis/: gs.rs  gspat.rs  mod.rs  naive.rs
autd3-gain-holo/src/math/: matrix.rs  mod.rs  vector.rs
autd3-gain-holo/src/matrix/: mod.rs  sdp.rs
autd3-link-calc/: Cargo.toml  README.md
autd3-link-calc/src/: error.rs  lib.rs  props.rs  sub.rs
autd3-link-calc/tests/: props.rs  sub.rs  test.rs
autd3-link-ethercrab/: Cargo.toml  README.md  build.rs
autd3-link-ethercrab/def/: Packet.def  wpcap.def
autd3-link-ethercrab/src/: error.rs  ethercrab_link.rs  lib.rs  log.rs
autd3-link-remote/: Cargo.toml  README.md
autd3-link-remote/src/: lib.rs  link.rs  server.rs
autd3-link-simulator/: Cargo.toml  README.md
autd3-link-simulator/src/: lib.rs
autd3-link-soem/: Cargo.toml  LICENSE  README.md  build.rs
autd3-link-soem/src/: lib.rs
autd3-link-twincat/: Cargo.toml  LICENSE  README.md  ads_c.cpp  build.rs
autd3-link-twincat/src/: error.rs  lib.rs  unix.rs
autd3-modulation-audio-file/: Cargo.toml  README.md
autd3-modulation-audio-file/src/: csv.rs  error.rs  lib.rs  rawpcm.rs  wav.rs
autd3-protobuf/: Cargo.toml  README.md  build.rs
autd3-protobuf/proto/: autd3.proto  datagram.proto  gain.proto  lightweight.proto  modulation.proto  utils-lightweight.proto  utils.proto
autd3-protobuf/src/: error.rs  lib.rs  pb.rs  traits.rs
autd3/benches/: bench.rs  group.rs
autd3/src/: controller.rs  error.rs  lib.rs  prelude.rs
autd3/tests/: old.rs  test.rs
benches/: Cargo.toml
benches/src/: gain.rs  group.rs  holo.rs
examples/: Cargo.toml  README.md
examples/src/: async.rs  calc.rs  ethercrab.rs  firmware_test.rs  lightweight.rs  lightweight_server.rs  nop.rs  remote.rs  remote_server.rs  remote_soem.rs  remote_twincat.rs  simulator.rs  soem.rs  twincat.rs
tests/ensure_no_std/: Cargo.toml
(+733 files in other folders)
