[workspace]

members = ["autd3", "autd3-core", "autd3-derive", "autd3-driver", "autd3-firmware-emulator", "autd3-gain-holo", "autd3-link-ethercrab", "autd3-link-remote", "autd3-link-twincat", "examples"]
exclude = ["benches"]
resolver = "3"

[workspace.package]
version = "38.0.1"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/shinolab/autd3-rs"
keywords = ["autd"]

[workspace.dependencies]
approx = { version = "0.5.1", default-features = false }
autd3 = { path = "./autd3", version = "38.0.1", default-features = false }
autd3-core = { path = "./autd3-core", version = "38.0.1", default-features = false }
autd3-derive = { path = "./autd3-derive", version = "38.0.1", default-features = false }
autd3-driver = { path = "./autd3-driver", version = "38.0.1", default-features = false }
autd3-firmware-emulator = { path = "./autd3-firmware-emulator", version = "38.0.1", default-features = false }
autd3-gain-holo = { path = "./autd3-gain-holo", version = "38.0.1", default-features = false }
autd3-link-ethercrab = { path = "./autd3-link-ethercrab", version = "38.0.1", default-features = false }
autd3-link-remote = { path = "./autd3-link-remote", version = "38.0.1", default-features = false }
autd3-link-twincat = { path = "./autd3-link-twincat", version = "38.0.1", default-features = false }
nalgebra = { version = "0.34.1", default-features = false }
rand = { version = "0.10.0", default-features = false }
rstest = { version = "0.26.1", default-features = false }
rayon = { version = "1.10.0", default-features = false }
tracing = { version = "0.1.41", default-features = false }
tokio = { version = "1.48.0", default-features = false }
