[package]
name = "autd3-core"
description = "AUTD3 core traits and types"
readme = "README.md"
keywords = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
std = ["time?/std", "spin_sleep"]
default = []
firmware = ["common", "ethercat", "utils", "zerocopy", "num-traits"]
acoustics = ["common", "geometry", "num-traits"]
async = ["tokio"]
datagram = ["common", "firmware", "geometry", "ethercat", "environment"]
common = []
derive = ["autd3-derive"]
time = ["dep:time"]
ethercat = []
gain = ["common", "datagram", "geometry", "environment", "firmware"]
geometry = ["nalgebra", "common"]
left_handed = []
link = ["zerocopy", "ethercat", "datagram", "geometry"]
modulation = ["firmware", "utils", "common", "datagram"]
use_meter = []
utils = ["num-traits"]
sleep = []
environment = ["num-traits"]

[dependencies]
autd3-derive = { workspace = true, optional = true }
nalgebra = { workspace = true, optional = true, features = ["libm"] }
num-traits = { version = "0.2.19", default-features = false, features = ["libm"], optional = true }
spin_sleep = { workspace = true, optional = true }
time = { version = "0.3.41", default-features = false, optional = true, features = ["macros"] }
tokio = { workspace = true, optional = true, features = ["rt", "time"] }
zerocopy = { workspace = true, optional = true, features = ["derive"] }

[dev-dependencies]
approx = { workspace = true }
itertools = { workspace = true }
rand = { workspace = true, features = ["thread_rng"] }
rstest = { workspace = true }
