[package]
name = "autd3-core"
description = "AUTD3 core traits and types"
readme = "README.md"
keywords = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
firmware = ["common", "ethercat", "utils"]
acoustics = ["common"]
datagram = ["common", "firmware", "geometry", "ethercat", "environment"]
common = []
derive = ["autd3-derive"]
time = ["dep:time"]
ethercat = []
gain = ["common", "datagram", "geometry", "environment", "firmware"]
geometry = ["common"]
left_handed = []
link = ["ethercat", "datagram", "geometry"]
modulation = ["firmware", "utils", "common", "datagram"]
use_meter = []
utils = []
sleep = []
environment = []
devices = ["common", "geometry"]
use_nalgebra = ["dep:nalgebra"]

[dependencies]
autd3-derive = { workspace = true, optional = true }
nalgebra = { workspace = true, optional = true, features = ["std"] }
time = { version = "0.3.41", default-features = false, optional = true, features = ["std", "macros"] }

[dev-dependencies]
approx = { workspace = true }
rand = { workspace = true, features = ["thread_rng"] }
rstest = { workspace = true }
