[package]
name = "autd3-derive"
description = "derive macros for autd3"
readme = "README.md"
keywords = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true, features = ["proc-macro"] }
quote = { workspace = true, features = ["proc-macro"] }
syn = { workspace = true, features = ["clone-impls", "printing", "derive", "parsing", "proc-macro"] }
regex = { workspace = true, features = ["unicode"] }
itertools = { workspace = true, features = ["use_std"] }

[dev-dependencies]
autd3-core = { workspace = true, features = ["derive", "gain", "modulation"] }
