[package]
name = "autd3-derive"
description = "derive macros for autd3"
readme = "README.md"
keywords = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
proc-macro2 = { version = "1.0.95", default-features = false }
quote = { version = "1.0.40", default-features = false, features = ["proc-macro"] }
syn = { version = "2.0.100", default-features = false, features = ["clone-impls", "printing", "derive", "parsing", "proc-macro"] }

[lib]
proc-macro = true
