[package]
name = "autd3-driver"
description = "AUTD3 driver"
readme = "README.md"
keywords = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
features = ["async"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
async = ["autd3-core/async"]
default = []

[dependencies]
autd3-core = { workspace = true, features = ["std", "gain", "common", "geometry", "derive", "link", "ethercat", "modulation", "firmware", "sleep", "environment"] }
autd3-derive = { workspace = true }
bitfield-struct = { workspace = true }
bitflags = { workspace = true }
itertools = { workspace = true, features = ["use_alloc"] }
nalgebra = { workspace = true }
pastey = { workspace = true }
rayon = { workspace = true }
seq-macro = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["macros", "std"] }
tynm = { workspace = true }
zerocopy = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
approx = { workspace = true }
rand = { workspace = true, features = ["thread_rng"] }
rstest = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tokio-test = { workspace = true }
