[package]
name = "autd3-driver"
description = "AUTD3 driver"
readme = "README.md"
keywords = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
features = ["async"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
async = ["autd3-core/async"]
default = []

[dependencies]
autd3-core = { workspace = true, features = ["derive", "gain", "link", "modulation", "sleep", "std"] }
bitflags = { version = "2.9.1", default-features = false }
rayon = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
rand = { workspace = true, features = ["thread_rng"] }
rstest = { workspace = true }
