[package]
name = "autd3-firmware-emulator"
description = "AUTD3 firmware emulator"
readme = "README.md"
keywords = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
autd3-derive = { workspace = true }
autd3-driver = { workspace = true }
bitfield-struct = { workspace = true }
time = { workspace = true, features = ["std"] }
zerocopy = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
autd3-core = { workspace = true, features = ["derive"] }
time = { workspace = true, features = ["macros"] }
itertools = { workspace = true }
rand = { workspace = true }
rstest = { workspace = true }

[features]
default = []
dynamic_freq = ["autd3-driver/dynamic_freq"]
