[package]
name = "autd3-firmware-emulator"
description = "AUTD3 firmware emulator"
readme = "README.md"
keywords = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[features]
default = []
thread-safe = []

[dependencies]
autd3-core = { workspace = true }
autd3-driver = { workspace = true }
bitfield-struct = { workspace = true }
time = { workspace = true, features = ["std"] }
zerocopy = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
autd3-core = { workspace = true, features = ["derive"] }
itertools = { workspace = true }
rand = { workspace = true, features = ["thread_rng"] }
rstest = { workspace = true }
time = { workspace = true, features = ["macros"] }
