[package]
name = "autd3-firmware-emulator"
description = "AUTD3 firmware emulator"
readme = "README.md"
keywords = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[features]
default = []
thread-safe = []
time = ["autd3-core/time"]

[dependencies]
autd3-core = { workspace = true }
autd3-driver = { workspace = true }

[dev-dependencies]
autd3-core = { workspace = true, features = ["derive"] }
rand = { workspace = true, features = ["thread_rng"] }
rstest = { workspace = true }
