[package]
name = "autd3-gain-holo"
description = "Holo (Multiple foci) Gain for autd3"
readme = "README.md"
keywords = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
features = ["greedy", "gs", "gspat", "naive"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
use_nalgebra = ["nalgebra", "autd3-core/use_nalgebra"]
default = ["use_nalgebra", "use_rand", "greedy", "gs", "gspat", "naive"]
greedy = []
gs = []
gspat = []
naive = []
use_rand = ["rand"]

[dependencies]
autd3-core = { workspace = true, features = ["acoustics", "derive", "gain", "std"] }
nalgebra = { workspace = true, optional = true, features = ["std", "alloc"] }
rand = { workspace = true, optional = true, features = ["thread_rng"] }

[dev-dependencies]
approx = { workspace = true }
autd3-driver = { workspace = true }
rstest = { workspace = true }
rand = { workspace = true, features = ["thread_rng"] }
