[package]
name = "autd3-link-ethercrab"
description = "autd3 link using EtherCrab"
readme = "README.md"
keywords = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
features = []
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
autd3-core = { workspace = true, features = ["link"] }
core_affinity = { version = "0.8.3", default-features = false }
ethercrab = { version = "0.6.0", default-features = false, features = ["std"] }
futures = { version = "0.3.31", default-features = false, features = ["alloc"] }
thread-priority = { version = "3.0.0", default-features = false }
tracing = { version = "0.1.41", default-features = false }
pcap = { version = "2.3.0", default-features = false }

[target.'cfg(windows)'.build-dependencies]
cc = { version = "1.2.39", default-features = false }
