[package]
name = "autd3-link-ethercrab"
description = "autd3 link using EtherCrab"
readme = "README.md"
keywords = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
features = ["core_affinity", "tracing", "tokio"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["core_affinity", "tracing", "tokio"]
core_affinity = ["dep:core_affinity"]
tracing = ["dep:tracing"]
tokio = ["dep:tokio"]

[dependencies]
autd3-core = { workspace = true, features = ["link", "async"] }
core_affinity = { version = "0.8.3", default-features = false, optional = true }
ethercrab = { version = "0.6.0", default-features = false, features = ["std"] }
futures-util = { version = "0.3.31", default-features = false, features = ["std"] }
thread-priority = { version = "3.0.0", default-features = false }
tracing = { workspace = true, optional = true }
pcap = { version = "2.3.0", default-features = false }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "time"], optional = true }

[target.'cfg(windows)'.build-dependencies]
cc = { version = "1.2.39", default-features = false }
