[package]
name = "autd3-link-remote"
description = "autd3 link for remote server"
readme = "README.md"
keywords = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
features = []
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["link"]
link = []
server = ["autd3-core/devices", "tokio"]

[dependencies]
autd3-core = { workspace = true, features = ["link"] }
tokio = { version = "1.48.0", features = ["io-util", "net", "macros"], optional = true }
