[package]
name = "autd3-link-remote"
description = "autd3 link for remote server"
readme = "README.md"
keywords = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
async = ["tokio", "autd3-core/async"]
default = ["link", "async"]
link = []
server = ["autd3-core/devices", "tokio", "tracing"]

[dependencies]
autd3-core = { workspace = true, features = ["link"] }
tracing = { workspace = true, optional = true }
tokio = { workspace = true, features = ["io-util", "net", "macros"], optional = true }
