[package]
name = "autd3-link-simulator"
description = "autd3 link for simulator"
readme = "README.md"
keywords = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
features = []
rustdoc-args = ["--cfg", "docsrs"]


[dependencies]
autd3-core = { workspace = true, features = ["link"] }
autd3-protobuf = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tonic = { workspace = true }
