[package]
name = "autd3-link-soem"
version = "23.0.0"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2021"

license-file = "LICENSE"
description = "Link of AUTD using SOEM."
repository = "https://github.com/shinolab/autd3-rs"
readme = "README.md"
keywords = ["autd"]

[build-dependencies]
cc = { workspace = true, features = ["parallel"], optional = true }
glob = { workspace = true, optional = true }

[dependencies]
autd3-driver = { path = "../autd3-driver", version = "23.0.0" }
autd3-protobuf = { path = "../autd3-protobuf", version = "23.0.0", optional = true }
thiserror = { workspace = true, optional = true }
time = { workspace = true, features = ["std"], optional = true }
tonic = { workspace = true, optional = true }
tokio = { workspace = true, features = ["time"] }
async-channel = { workspace = true, optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56.0", features = ["Win32_Foundation", "Win32_System_Performance", "Win32_Networking_WinSock", "Win32_System_SystemInformation"], optional = true }

[target.'cfg(not(windows))'.dependencies]
libc = { version = "0.2.144", optional = true }

[features]
local = ["cc", "glob", "async-channel", "time", "thiserror", "windows", "libc"]
remote = ["autd3-protobuf", "tonic"]
default = ["local"]
all = ["local", "remote"]
async-trait = ["autd3-driver/async-trait", "autd3-protobuf/async-trait"]
