[package]
name = "autd3-link-soem"
version = "25.0.0-rc.7"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2021"

license-file = "LICENSE"
description = "Link of AUTD using SOEM."
repository = "https://github.com/shinolab/autd3-rs"
readme = "README.md"
keywords = ["autd"]

[build-dependencies]
cc = { workspace = true, features = ["parallel"], optional = true }
glob = { workspace = true, optional = true }

[dependencies]
serde = { workspace = true, features = ["derive"], optional = true }
autd3-driver = { path = "../autd3-driver", version = "25.0.0-rc.7" }
autd3-protobuf = { path = "../autd3-protobuf", version = "25.0.0-rc.7", optional = true }
thiserror = { workspace = true, optional = true }
time = { workspace = true, features = ["std"], optional = true }
tonic = { workspace = true, optional = true }
tokio = { workspace = true, features = ["time"] }
async-channel = { workspace = true, optional = true }
thread-priority = { workspace = true, optional = true }
derive_more = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56.0", features = ["Win32_Media_Multimedia", "Win32_System_Threading", "Win32_Foundation"], optional = true }

[target.'cfg(not(windows))'.dependencies]
libc = { version = "0.2.144", optional = true }

[features]
local = ["cc", "glob", "async-channel", "time", "thiserror", "windows", "libc", "thread-priority"]
remote = ["autd3-protobuf", "tonic"]
default = ["local"]
all = ["local", "remote"]
serde = ["dep:serde"]
async-trait = ["autd3-driver/async-trait", "autd3-protobuf/async-trait"]
