[package]
name = "autd3-link-soem"
license-file = "LICENSE"
description = "Link of AUTD using SOEM."
readme = "README.md"
keywords = ["autd"]
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[build-dependencies]
cc = { workspace = true, features = ["parallel"], optional = true }
glob = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }

[dependencies]
serde = { workspace = true, features = ["derive"], optional = true }
autd3-driver = { workspace = true }
autd3-protobuf = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
time = { workspace = true, features = ["std"], optional = true }
tonic = { workspace = true, optional = true }
tokio = { workspace = true, features = ["time"] }
async-channel = { workspace = true, optional = true }
thread-priority = { workspace = true, optional = true }
derive_more = { workspace = true }
tracing = { workspace = true }
ta = { workspace = true, optional = true }
zerocopy = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = ["Win32_Media_Multimedia", "Win32_System_Threading", "Win32_Foundation"], optional = true }

[target.'cfg(not(windows))'.dependencies]
libc = { version = "0.2.144", optional = true }

[features]
local = ["ta", "cc", "glob", "anyhow", "async-channel", "time", "thiserror", "windows", "libc", "thread-priority"]
remote = ["autd3-protobuf", "tonic"]
default = ["local"]
all = ["local", "remote"]
serde = ["dep:serde"]
async-trait = ["autd3-driver/async-trait", "autd3-protobuf/async-trait"]
