[package]
name = "autd3-link-twincat"
description = "autd3 link using TwinCAT"
readme = "README.md"
keywords = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
features = ["local", "remote"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["local"]
local = []
remote = ["cc"]
all = ["local", "remote"]

[dependencies]
autd3-core = { workspace = true, features = ["std", "link"] }

[build-dependencies]
cc = { version = "1.2.24", optional = true }
