[package]
name = "autd3-link-twincat"
description = "autd3 link using TwinCAT"
readme = "README.md"
keywords = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
async = ["autd3-core/async"]
default = ["local", "remote"]
local = []
remote = ["ads"]

[dependencies]
autd3-core = { workspace = true, features = ["link"] }
ads = { version = "0.4.4", default-features = false, optional = true }
