[package]
name = "autd3-modulation-audio-file"
description = "autd3 modulation from audio file"
readme = "README.md"
keywords = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
hound = { workspace = true }
autd3-core = { workspace = true, features = ["derive", "modulation", "resampler"] }
autd3-derive = { workspace = true }
thiserror = { workspace = true }
csv = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }

[features]
default = []
async-trait = ["autd3-core/async-trait"]

[dev-dependencies]
anyhow = { workspace = true }
tempfile = { workspace = true }
rstest = { workspace = true }
