[package]
name = "autd3-modulation-audio-file"
description = "autd3 modulation from audio file"
readme = "README.md"
keywords = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[features]
default = []

[dependencies]
autd3-core = { workspace = true, features = ["derive", "modulation"] }
autd3-derive = { workspace = true }
csv = { workspace = true }
hound = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tempfile = { workspace = true }
