[package]
name = "autd3-protobuf"
description = "gRPC protobuf for autd3"
readme = "README.md"
keywords = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
features = ["async-trait"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
tonic-build = ["dep:tonic-build"]
async-trait = ["autd3-core/async-trait", "autd3/async-trait"]

[dependencies]
autd3 = { workspace = true, optional = true }
autd3-core = { workspace = true, features = ["geometry"] }
autd3-driver = { workspace = true }
autd3-gain-holo = { workspace = true, optional = true }
derive_more = { workspace = true, optional = true, features = ["deref"] }
prost = { workspace = true, features = ["derive"] }
seq-macro = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
tonic = { workspace = true, features = ["channel", "codegen", "prost", "server"] }
zerocopy = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true, optional = true, features = ["prost"] }

[dev-dependencies]
approx = { workspace = true }
rand = { workspace = true, features = ["thread_rng"] }
rstest = { workspace = true }
