[package]
name = "autd3-protobuf"
description = "gRPC protobuf for autd3"
readme = "README.md"
keywords = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
tonic-build = ["dep:tonic-build"]

[dependencies]
autd3 = { workspace = true, optional = true }
autd3-core = { workspace = true, features = ["geometry"] }
autd3-driver = { workspace = true }
prost = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tonic = { workspace = true, features = ["channel", "codegen", "prost", "server"] }
zerocopy = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true, optional = true, features = ["prost"] }

[dev-dependencies]
approx = { workspace = true }
rand = { workspace = true, features = ["thread_rng"] }
rstest = { workspace = true }
