[package]
name = "autd3-protobuf"
description = "gRPC protobuf for autd3"
readme = "README.md"
keywords = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
tonic-prost-build = ["dep:tonic-prost-build"]

[dependencies]
autd3 = { workspace = true, optional = true }
autd3-core = { workspace = true, features = ["geometry"] }
autd3-driver = { workspace = true }
prost = { version = "0.14.1", default-features = false }
tonic = { workspace = true, features = ["channel", "codegen", "server"] }
tonic-prost = { version = "0.14.0", default-features = false }
zerocopy = { workspace = true }

[build-dependencies]
tonic-prost-build = { version = "0.14.0", default-features = false, optional = true }

[dev-dependencies]
approx = { workspace = true }
rand = { workspace = true, features = ["thread_rng"] }
rstest = { workspace = true }
